style: minor fixes so the website looks good on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -286,7 +286,7 @@ a {
   left: 0;
   right: 0;
   top: 400px;
-  height: 600px;
+  height: 800px;
   background: #f4f8fb;
   -webkit-transform: skew(0,-8deg);
   transform: skew(0,-8deg);
